# Me-First-Warehouse

./: .env.example  .gitignore  README.md  cleanup_config.example.json  daily_cleanup.py  daily_report.py  daily_report_history.md  desktop_app_advanced_guide.md  desktop_app_comparison.md  eslint.config.cjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  report.md  shutdown_now.bat  tsconfig.base.json
daily_pc_activity_report/: .env.example  .gitignore  README.md  main.py  pyproject.toml
daily_pc_activity_report/config/: settings.example.yaml  settings.yaml
daily_pc_activity_report/scripts/: install_task.ps1  run_report.bat
daily_pc_activity_report/src/daily_pc_activity_report/: __init__.py  __main__.py  analyzer.py  config.py  models.py  reporter.py  scanner.py  utils.py
feishu/: README.md  (+1 more)
folder-growth-monitor/: .env.example  README.md  pyproject.toml  requirements.txt
folder-growth-monitor/config/: settings.yaml
folder-growth-monitor/src/folder_growth_monitor/: __init__.py  activity_analyzer.py  analyzer.py  cli.py  config.py  models.py  ranker.py  reporter.py  scanner.py  storage.py  trend_analyzer.py  utils.py
folder-growth-monitor/src/folder_growth_monitor/web/: api.py  app.py
self-growth-daily-briefing/: .env.example  README.md  pyproject.toml
self-growth-daily-briefing/config/: feeds.yaml  settings.yaml
self-growth-daily-briefing/scripts/: run-briefing.ps1
self-growth-daily-briefing/self_growth_daily_briefing/: __init__.py  __main__.py
self-growth-daily-briefing/skill/: SKILL.md
self-growth-daily-briefing/skill/agents/: openai.yaml
self-growth-daily-briefing/skill/scripts/: invoke.ps1
self-growth-daily-briefing/src/self_growth_daily_briefing/: __init__.py  app.py  cli.py  collect.py  config.py  mail.py  models.py  rank.py  schedule.py  storage.py  write.py
self-growth-daily-briefing/templates/: email.html  email.txt
self-growth-daily-briefing/tests/: __init__.py  conftest.py  helpers.py  test_collect.py  test_end_to_end.py  test_mail.py  test_rank.py  test_schedule.py  test_write.py
self-growth-daily-briefing/tests/fixtures/: greater_good.xml  ness_labs.xml  older_window.xml  reddit_getdisciplined.json  reddit_selfimprovement.json  tiny_buddha.xml
sleep-time-recorder/: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
sleep-time-recorder/config/: default_settings.json  logging.ini
sleep-time-recorder/docs/: STEP10_REVIEW_AND_PACKAGING.md
sleep-time-recorder/scripts/: README.md  build_exe.ps1  init_db.py
sleep-time-recorder/src/sleep_tracker/: __init__.py  app.py
sleep-time-recorder/src/sleep_tracker/core/: __init__.py  constants.py
sleep-time-recorder/src/sleep_tracker/data/: __init__.py  database.py  exceptions.py  models.py  repository.py
sleep-time-recorder/src/sleep_tracker/services/: __init__.py  sleep_reminder_service.py  sleep_timer_service.py  sleep_trend_service.py
sleep-time-recorder/tests/: __init__.py  test_history_list_widget.py  test_main_window_integration.py  test_paths_utils.py  test_settings_panel_widget.py  test_sleep_reminder_service.py  test_sleep_session_repository.py  test_sleep_timer_service.py  test_sleep_trend_service.py  test_system_tray_controller.py
tauri-demo/src-tauri/: Cargo.toml  tauri.conf.json
tauri-demo/src-tauri/src/: main.rs
(+229 files in other folders)
