[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-time-recorder"
version = "0.1.0"
description = "Sleep time recorder desktop app built with PySide6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7.0",
  "matplotlib>=3.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
