[package]
name = "tauri-demo"
description = "Tauri 示例应用"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "1.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]

# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this feature, it's required for the build to work
custom-protocol = ["tauri/custom-protocol"]